--- a/src/main/webapp/WEB-INF/includes/calcHeader.html
+++ b/src/main/webapp/WEB-INF/includes/calcHeader.html
@@ -1,12 +1,16 @@
 <nav class="navbar navbar-default" role="navigation">
 	<div class="container-fluid">
 		<ul class="nav nav-pills">
-			<li role="presentation"><a href="RewardCalculator?event=SC">Soul
-					Crystal</a></li>
-			<li role="presentation"><a
+			<li role="presentation" class="navbar-btn"><a
+				href="RewardCalculator?event=SC">Soul Crystal</a></li>
+			<li role="presentation" class="navbar-btn"><a
 				href="RewardCalculator?event=MountWhip">Mount Training Whip</a></li>
-			<li role="presentation"><a href="RewardCalculator?event=Mahra">Mahra</a></li>
-			<li role="presentation"><a href="RewardCalculator?event=Sep">Sepulcrum</a></li>
+			<li role="presentation" class="navbar-btn"><a
+				href="RewardCalculator?event=Mahra">Mahra</a></li>
+			<li role="presentation" class="navbar-btn"><a
+				href="RewardCalculator?event=Sep">Sepulcrum</a></li>
+			<li role="presentation" class="navbar-btn"><a
+				href="GemEventCalculator">Gem Event</a></li>
 		</ul>
 	</div>
 </nav>
